cmake_minimum_required(VERSION 3.15)
project(04_arrary_table)

set(CMAKE_CXX_STANDARD 14)

add_executable(04_arrary_table Symmetric_matrix.cpp)
add_executable(c Sparse_matrices_c.cpp)
add_executable(c_ Sparse_matrices.cpp)
add_executable(c__ diagonal_matrix.cpp)
add_executable(Gt Generalized_tables.cpp)
add_executable(01 02.cpp)