cmake_minimum_required(VERSION 3.15)
project(05_tree)

set(CMAKE_CXX_STANDARD 14)

add_executable(05_tree Binary_tree.cpp)
add_executable(tree Binary_tree_lianshi.cpp)
add_executable(tree1 Binary_tree_lianshi_1.cpp)
add_executable(Huft Huffman_tree.cpp)
add_executable(Hufe Huffman_encoding.cpp)
add_executable(bt Binary_tree_lianshi_2.cpp)
add_executable(tt test.cpp)